--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,107 @@
-name: Test Across Matrix
-
 on:
   push:
+    # branches: [main]
+  pull_request:
+    # branches: [main]
+
+name: Build
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
-  test:
-    ## We want to define a strategy for our job
-    strategy:
-      ## this will contain a matrix of all of the combinations
-      ## we wish to test again:
-      matrix:
-        go-version: [1.12.x, 1.13.x, 1.14.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    
-    ## Defines the platform for each test run
-    runs-on: ${{ matrix.platform }}
-    
-    ## the steps that will be run through for each version and platform
-    ## combination
-    steps:
-    ## sets up go based on the version
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
 
-    ## checks out our code locally so we can work with the files
-    - name: Checkout code
-      uses: actions/checkout@v2
+  lint:
+    name: Lint files
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.4'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2.5.2
+        with:
+          version: latest
+
+  test:
+    name: Run tests
+    runs-on: 'ubuntu-latest'
+    needs: lint
+    steps:
+      - uses: actions/checkout@v2.4.0
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.4'
+      - run: go test -v -cover
+
+  build:
+    name: Build binary
+    runs-on: 'ubuntu-latest'
+    needs: test
+    strategy:
+      matrix:
+        goosarch:
+          # - 'aix/ppc64'
+          # # - 'android/386'
+          # - 'android/amd64'
+          # # - 'android/arm'
+          # - 'android/arm64'
+          # - 'darwin/amd64'
+          # - 'darwin/arm64'
+          # - 'dragonfly/amd64'
+          # - 'freebsd/386'
+          # - 'freebsd/amd64'
+          # - 'freebsd/arm'
+          # - 'freebsd/arm64'
+          # - 'illumos/amd64'
+          # - 'ios/amd64'
+          # - 'ios/arm64'
+          # - 'js/wasm'
+          - 'linux/386'
+          - 'linux/amd64'
+          - 'linux/arm'
+          - 'linux/arm64'
+          - 'linux/mips'
+          - 'linux/mips64'
+          - 'linux/mips64le'
+          - 'linux/mipsle'
+          - 'linux/ppc64'
+          - 'linux/ppc64le'
+          - 'linux/riscv64'
+          - 'linux/s390x'
+          # - 'netbsd/386'
+          # - 'netbsd/amd64'
+          # - 'netbsd/arm'
+          # - 'netbsd/arm64'
+          # - 'openbsd/386'
+          # - 'openbsd/amd64'
+          # - 'openbsd/arm'
+          # - 'openbsd/arm64'
+          # - 'openbsd/mips64'
+          # - 'plan9/386'
+          # - 'plan9/amd64'
+          # - 'plan9/arm'
+          # - 'solaris/amd64'
+          - 'windows/386'
+          - 'windows/amd64'
+          - 'windows/arm'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2.4.0
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.4'
+      - name: Get OS and arch info
+        run: |
+          GOOSARCH=${{matrix.goosarch}}
+          GOOS=${GOOSARCH%/*}
+          GOARCH=${GOOSARCH#*/}
+          BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
+          echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
+          echo "GOOS=$GOOS" >> $GITHUB_ENV
+          echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+      - name: Build
+        run: |
+          go build -o "$BINARY_NAME" -v
