--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,18 +12,31 @@ defaults:
 
 jobs:
 
-  lint:
-    name: Lint files
-    runs-on: 'ubuntu-latest'
+  golangci-lint:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.4.0
-      # - uses: actions/setup-go@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      # no need with v2
+      # - name: Set up Go
+      #   uses: actions/setup-go@v2
       #   with:
-      #     go-version: '1.16.4'
+      #     go-version: '1.17'
+
+      # no need with v2
+      # - uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #         ~/.cache/golangci-lint
+      #         ~/.cache/go-build
+      #         ~/go/pkg/mod
+      #     key: ${{ runner.os }}-golangcilint-${{ hashFiles('**/go.sum') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-golangcilint-
+
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-        with:
-          version: v1.29
+        uses: reviewdog/action-golangci-lint@v2
 
   test:
     name: Run tests
