--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ defaults:
 
 jobs:
 
-  golangci-lint:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
